--- a/vignettes/Intro_to_D3mirt.Rmd
+++ b/vignettes/Intro_to_D3mirt.Rmd
@@ -125,7 +125,7 @@ This since only two items in the set are needed to identify the model (see the s
 The package includes the following main functions.
 
 -   `modid()`: D3mirt Model Identification
--   `D3mirt()`: 3D DMIRT Model Estimation
+-   `D3mirt()`: D3 DMIRT Model Estimation
 -   `plot()`: Graphical Output for `D3mirt()`
 
 In what follows, the `D3mirt` procedure and some of its functions and options will be described using the built-in data set "anes0809offwaves".
@@ -175,7 +175,7 @@ The `modid()` function can help by suggesting what items to use for this purpose
 ## Item Selection
 
 If the model is not known, the factor structure must be explored with exploratory factor analysis (EFA).
-However, because `D3mirt` analysis is based on the M2PL and the MGRM, it is recommended to use multidimensional item response theory EFA methods, such as the EFA option in `mirt::mirt` (Chalmers, 2012) with `ìtemtype = 'graded'` or `'2PL'`, so that the EFA is performed with the proper item model.
+However, because `D3mirt` analysis is based on the M2PL and the MGRM, it is recommended to use multidimensional item response theory EFA methods, such as the EFA option in `mirt()` (Chalmers, 2012), from the package with the same name, with `ìtemtype = 'graded'` or `'2PL'`, so that the EFA is performed with the proper item model.
 The `mirt()` function is integrated into the `modid()` function so that the user needs only to provide a data frame containing empirical data in the first argument of the function.
 However, it is also possible to use the `modid()` function without performing the EFA internally by setting `efa = FALSE`, if, for instance, a factor loading data frame is already available.
 
@@ -300,7 +300,7 @@ But it does suggest that the methodology *can* be used and the results will be p
 
 ## The `D3mirt()` Function
 
-The `D3mirt()` function takes in model parameters from a three-dimensional compensatory model (either in the form of a data frame or an S4 object of class 'SingleGroupClass' exported from `mirt::mirt` (Chalmers, 2012) function) and returns an $S3$ object of class `D3mirt` with lists of $a$ and $d$, $MDISC$, and $MDIFF$ parameters, direction cosines, and spherical coordinates.
+The `D3mirt()` function takes in model parameters from a three-dimensional compensatory model (either in the form of a data frame or an S4 object of class 'SingleGroupClass' exported from the `mirt()` (Chalmers, 2012) function) and returns an $S3$ object of class `D3mirt` with lists of $a$ and $d$, $MDISC$, and $MDIFF$ parameters, direction cosines, and spherical coordinates.
 Regarding the latter, spherical coordinates are represented by $\theta$ and $\phi$.
 The $\theta$ coordinate is the positive or negative angle in degrees, starting from the $x$-axis, of the vector projections from the vector arrows in the $xz$-plane up to $\pm 180°$.
 Note, the $\theta$ angle is oriented following the positive pole of the $x$ and $z$ axis so that the angle increases clockwise in the graphical output.
@@ -312,7 +312,7 @@ If constructs are used, the function also returns construct direction cosines, s
 ### Fitting the Compensatory Multidimensional Model
 
 The three-dimensional compensatory model is specified so that all items load on all three factors in the model, and all factors are constrained to be orthogonal (see below).
-The fitting of the model is preferably done with the `mirt::mirt` (Chalmers, 2012) function.
+The fitting of the model is preferably done with the `mirt()` (Chalmers, 2012) function.
 Observe that the START and FIXED commands are used to fix the slope parameters on the second, $a2$, and third, $a3$.
 factor for item $_1$ (W7Q3), and the slope on the third, $a3$, factor for item $i_2$ (W7Q20).
 Note, because the fitting of the compensatory model in the `mirt()` function takes a long time, the item parameters are available in the package file "mod.1.Rdata" and are loaded in the next code chunk below.
@@ -527,14 +527,14 @@ This allows for a profile analysis in which respondents can be separated, or sub
 The resulting output shows where the respondents are located in the model, and, accordingly, what model profile best describes them.
 Similarly, respondent categories can be simultaneously compared to see if a group-level effect can be visually observed.
 
-To do this, the user must first extract respondent factor scores with `mirt::fscores` (Chalmers, 2012) and then separate or select a subset of respondent rows based on one or more criteria.
+To do this, the user must first extract respondent factor scores with `fscores()` (Chalmers, 2012) and then separate or select a subset of respondent rows based on one or more criteria.
 The resulting data frame is imputed in the `profiles` argument.
 Generally, it can be useful to hide vector arrows with `hide = TRUE` when plotting respondent profiles to avoid visual cluttering.
 The example below separates respondents using the gender variable included in the built-in data set.
 To save some time in running the examples, the `fscores()` output is stored in the package file "fscores.Rdata" and is loaded in the next code chunk below.
 
 ```{r, eval = FALSE}
-# Extract respondent factor scores from mod1 with fscores() function from [mirt::mirt]
+# Extract respondent factor scores from mod1 with fscores() function
 f <- mirt::fscores(mod.1, 
                    method="EAP", 
                    full.scores = TRUE, 
