--- a/README.Rmd
+++ b/README.Rmd
@@ -44,7 +44,7 @@ If constructs are used, the output will include reporting of the directional dis
 The package includes the following main functions.
 
 -   `modid()`: D3mirt Model Identification
--   `D3mirt()`: D3 DMIRT Model Estimation
+-   `D3mirt()`: 3D DMIRT Model Estimation
 -   `plot()`: Graphical Output for `D3mirt()`
 
 ## Installation
