--- a/README.Rmd
+++ b/README.Rmd
@@ -125,7 +125,7 @@ x <- x[,3:22] # Remove columns for age and gender
 
 # Fit a three-dimensional graded response model with orthogonal factors
 # Example below uses Likert items from the built-in data set "anes0809offwaves"
-# Item W7Q3 and item W7Q20 was selected with `modid()`
+# Item W7Q3 and item W7Q20 was selected with modid()
 # The model specification set all items in the data set (1-20) 
 # to load on all three factors (F1-F3)
 # The START and FIXED commands are used on the two items to identify the DMIRT model
@@ -142,7 +142,6 @@ x <- x[,3:22] # Remove columns for age and gender
            FIXED=(W7Q3,a3)
 
            FIXED=(W7Q20,a3) '
-
 
 mod.1 <- mirt::mirt(x, 
                    spec, 
